fix loop, classloader issue